added score counter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <div class="game" id="game">
+        <div id="score">
+            <span id="score-text">Score: </span>
+            <span id="score-value">0</span>
+        </div>
         <img class="game_img" src="img/background.jpg" alt="">
         <div class="spaceship" id="spaceship" style="top: 175px">
             <img class="spaceship_img" src="img/spaceship.png" alt="">
